--- a/app/src/main/res/layout-large/fragment_weather.xml
+++ b/app/src/main/res/layout-large/fragment_weather.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ah.hathi.simpleweather.WeatherActivity$PlaceholderFragment" >
+    tools:context="com.simple.weather.app.WeatherActivity$PlaceholderFragment" >
 
     <TextView
         android:id="@+id/city_field"
